<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_scan"
        android:orderInCategory="2"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_scan"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_mylists"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/action_mylists"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_logout"/>

</menu>